--- a/main_event_loop.tex
+++ b/main_event_loop.tex
@@ -107,7 +107,7 @@ alternative of \cppin{Event} is omitted. The difference in usage mainly lies in
 the \textit{visiting} of \cppin{Event} alternatives, which we will discuss in
 the next section.
 
-\rssubsection{Event Dispatch by Pattern Matching}
+\rssubsection{Event Dispatch through Pattern Matching}
 
 Once an event has been generated at the windowing system and filtered into a
 structure that is to be consumed by the window manager, work must be delegated
