--- a/seminar.bib
+++ b/seminar.bib
@@ -74,6 +74,13 @@
   url =          "https://bitbashing.io/std-visit.html"
 }
 
+@misc{ buildingahashmap,
+  author =       {Alexis Beingessner},
+  title =        "{Building a HashMap in Rust - Part 1: What's a HashMap?}",
+  year =         "accessed May 22, 2021",
+  url =          "https://cglab.ca/~abeinges/blah/robinhood-part-1/"
+}
+
 @misc { rustdynamicdispatch,
   author =       {Adam Schwalm},
   title =        "{Exploring Dynamic Dispatch in Rust}",
